reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__enum_with_many_variants-2.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "super :: into_typescript_code :: < LargeEnum > ()"
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflectapi-cli
//
// Schema name:
//

export function client(base: string | Client): __definition.Interface {
  return __implementation.__client(base);
}

export namespace __definition {
  export interface Interface {
    inout_test: (
      input: reflectapi_demo.tests.serde.LargeEnum,
      headers: {},
      options?: RequestOptions,
    ) => AsyncResult<reflectapi_demo.tests.serde.LargeEnum, {}>;
  }
}
export namespace reflectapi {
  /**
   * Struct object with no fields
   */
  export interface Empty {}

  /**
   * Error object which is expected to be never returned
   */
  export interface Infallible {}
}

export namespace reflectapi_demo {
  export namespace tests {
    export namespace serde {
      export type LargeEnum =
        | { type: "Alpha" }
        | { type: "Beta" }
        | {
            type: "Gamma";
            x: number; /* i32 */
          }
        | {
            type: "Delta";
            value: string;
          }
        | { type: "Epsilon" }
        | {
            type: "Zeta";
            y: boolean;
          }
        | { type: "Eta" }
        | {
            type: "Theta";
            value: number; /* u32 */
          }
        | { type: "Iota" }
        | {
            type: "Kappa";
            z: number; /* f64 */
          }
        | { type: "Lambda" }
        | {
            type: "Mu";
            w: string;
            v: number; /* i32 */
          };
    }
  }
}

namespace __implementation {

  function inout_test(client: Client) {
    return (
      input: reflectapi_demo.tests.serde.LargeEnum,
      headers: {},
      options?: RequestOptions,
    ) =>
      __request<
        reflectapi_demo.tests.serde.LargeEnum,
        {},
        reflectapi_demo.tests.serde.LargeEnum,
        {}
      >(client, "/inout_test", input, headers, options);
  }
}
